kubernetes/apps/headlamp/http-route.yml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
spec:
  hostnames: ["headlamp.chkpwd.com"]
  parentRefs:
    - name: private
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: headlamp
          namespace: tools
          port: 80
